{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 28,
  "lineage": "e233cf89-20fa-e8d7-1452-e122cc81d70d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "location": "westeurope",
            "name": "nsg-1",
            "resource_group_name": "nodes-rs-lolas-ep",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [
                  "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/public"
                ],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-test-role-1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [
                  "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/site"
                ],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_kubernetes_cluster.aks-ep",
            "azurerm_kubernetes_cluster_node_pool.aks-ep-nodes",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_address_ep",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/networkSecurityGroups/nsg-2",
            "location": "westeurope",
            "name": "nsg-2",
            "resource_group_name": "nodes-rs-lolas-ep",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [
                  "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/public"
                ],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-test-role-2",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [
                  "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/site"
                ],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_kubernetes_cluster.aks-ep",
            "azurerm_kubernetes_cluster_node_pool.aks-ep-nodes",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_address_ep",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-test-role-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [
              "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/public"
            ],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/networkSecurityGroups/nsg-1/securityRules/nsg-test-role-1",
            "name": "nsg-test-role-1",
            "network_security_group_name": "nsg-1",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "nodes-rs-lolas-ep",
            "source_address_prefix": "",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [
              "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/site"
            ],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_application_security_group.sec_address_public",
            "azurerm_application_security_group.sec_address_site",
            "azurerm_kubernetes_cluster.aks-ep",
            "azurerm_kubernetes_cluster_node_pool.aks-ep-nodes",
            "azurerm_network_security_group.nsg-1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_address_ep",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-test-role-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [
              "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/public"
            ],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/networkSecurityGroups/nsg-2/securityRules/nsg-test-role-2",
            "name": "nsg-test-role-2",
            "network_security_group_name": "nsg-2",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "nodes-rs-lolas-ep",
            "source_address_prefix": "",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [
              "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/nodes-rs-lolas-ep/providers/Microsoft.Network/applicationSecurityGroups/site"
            ],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_application_security_group.sec_address_public",
            "azurerm_application_security_group.sec_address_site",
            "azurerm_kubernetes_cluster.aks-ep",
            "azurerm_kubernetes_cluster_node_pool.aks-ep-nodes",
            "azurerm_network_security_group.nsg-2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_address_ep",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_address_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/core",
            "name": "core",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lolas",
            "virtual_network_name": "lolas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_address_ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.1.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/ep",
            "name": "ep",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lolas",
            "virtual_network_name": "lolas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_address_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.1.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/nat",
            "name": "nat",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lolas",
            "virtual_network_name": "lolas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_address_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.2.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/public",
            "name": "public",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lolas",
            "virtual_network_name": "lolas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_address_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "11.0.2.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/site",
            "name": "site",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lolas",
            "virtual_network_name": "lolas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "11.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d110b2ea-83f9-400c-90b9-aaeb08938052",
            "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet",
            "location": "westeurope",
            "name": "lolas-vnet",
            "resource_group_name": "lolas",
            "subnet": [
              {
                "address_prefix": "11.0.0.0/24",
                "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/core",
                "name": "core"
              },
              {
                "address_prefix": "11.0.1.0/25",
                "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/ep",
                "name": "ep"
              },
              {
                "address_prefix": "11.0.1.128/25",
                "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/nat",
                "name": "nat"
              },
              {
                "address_prefix": "11.0.2.0/27",
                "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/public",
                "name": "public"
              },
              {
                "address_prefix": "11.0.2.32/27",
                "id": "/subscriptions/613ad620-f6ee-4055-bd0a-68a93656bee3/resourceGroups/lolas/providers/Microsoft.Network/virtualNetworks/lolas-vnet/subnets/site",
                "name": "site"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}